<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('tarpaulin_print_batch', function (Blueprint $table) {
            $table->primary(['tarpaulin_id', 'print_batch_id']);
            $table->foreignId('tarpaulin_id')->constrained()->onDelete('cascade');
            $table->foreignId('print_batch_id')->constrained()->onDelete('cascade');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('tarpaulin_print_batch');
    }
};